# stock_investment

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  Makefile  README.md  TODOS.md  backup_20260413.dump  pyproject.toml  requirements-api.txt  requirements.txt
config/: accumulation_params.json  engine_params.json  surge_params.json
data/: surge_signals.db
data/factor_reports/: factor_report_2026-04-08.json  factor_report_2026-04-09.json  factor_report_2026-04-10.json  factor_report_2026-04-11.json  factor_report_2026-04-13.json
data/intraday_hits/: 2026-04-16.json  2026-04-17.json  2026-04-20.json  2026-04-21.json
data/scans/: coil_2026-04-16.csv  coil_2026-04-17.csv  coil_2026-04-20.csv  coil_2026-04-21.csv  scan_2026-03-25.csv  scan_2026-04-01.csv  scan_2026-04-02.csv  scan_2026-04-03.csv  scan_2026-04-06.csv  (+22 more)
frontend/: index.html
scripts/: ab_test_framework.py  accuracy_monitor.py  analyze_outcomes.py  apply_tuning.py  backtest.py  backtest_v23_vs_v22.py  batch_plan.py  batch_scan.py  bot.py  bot_setup.py  build_broker_labels.py  coil_backtest.py  coil_factor_report.py  coil_monitor.py  coil_scan.py  daily_runner.py  data_alignment_check.py  entry_delay_analysis.py  factor_report.py  fetch_watchlist.py  migrate.py  optimize.py  optimize_agent.py  optimize_coil.py  precheck.py  record_signal_outcomes.py  report.py  review.py  run_bayesian_update.py  run_phase1_classification.py  settle_outcomes.py  setup.py  spike_validate.py  surge_db.py  surge_factor_report.py  surge_scan.py  test_factor.py  trade.py  trajectory_analysis.py  validate_free_tier.py  (+2 more)
tests/: conftest.py
(+107 files in other folders)
