[tool.poetry]
name = "taiwan-stock-agent"
version = "0.1.0"
description = "Taiwan stock broker label + Triple Confirmation signal engine"
authors = ["howard"]
packages = [{ include = "taiwan_stock_agent", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = ">=2.0"
psycopg2-binary = "*"
pandas = "*"
pyarrow = "*"
tenacity = "*"
anthropic = "*"
python-dotenv = "*"
requests = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-postgresql = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# pytest-postgresql v4+ auto-registers via entrypoints AND tests/conftest.py
# also registers it via pytest_plugins = ["pytest_postgresql.plugin"].
# Disable the entrypoint registration to prevent the double-registration
# ValueError — conftest takes ownership of the plugin.
addopts = "-p no:pytest_postgresql"
testpaths = ["tests"]
